# veeam-cli

./: .env.example  .gitignore  ROADMAP.md  UNPACKAGE.md  USAGE.md  context.xml  pyproject.toml  requirements-dev.txt
docs/source/: README.md  conf.py  index.rst  installation.rst  usage.rst
src/veeam_cli/: cli.py  client.py
tests/: test_cli.py  test_client.py
